# pollack-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  NEXT-STEPS-company-pc.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: HARNESS.md
.github/: CODEOWNERS
_workspace/: 00_input.md  01_pipeline_design.md  02_infra_config.md  03_monitoring.md  04_security_scan.md  04b_quality_gate.md  04c_test_strategy.md  04d_ai_redteam.md  05_review_report.md  05_review_report_round2.md
agents/: __init__.py  active_hunt_agent.py  approval_agent.py  auto_kql_rule_agent.py  base.py  graph.py  investigation_agent.py  outcome_probe_agent.py  report_agent.py  response_agent.py  rule_update_agent.py  structures.py  threat_landscape_agent.py  triage_agent.py  validation_agent.py
agents/judges/: base.py  (+5 more)
app/: __init__.py  dashboard.py  health.py  hotpath.py  learning.py  metrics.py  toolserver.py
benchmarks/: README.md  run_atlas_redteam.py  run_benchmarks.py  run_fp_recurrence.py  run_hard_eval.py  run_kpi.py  run_per_scenario.py  run_redteam_skeleton.py  run_scenario_logs.py  run_structure_comparison.py
core/: __init__.py  active_hunt.py  actor_fingerprint.py  actors.py  ai_redteam.py  aibom.py  alert.py  bas.py  bda.py  brief.py  cacao.py  campaign.py  cato.py  causal.py  coa.py  coerce.py  coldcase.py  commander.py  correlation.py  dashboard.py  deception.py  degradation.py  diamond.py  dynamics.py  egress.py  engage.py  exceptions.py  experience.py  honeypot.py  hunt.py  hypothesis.py  incident.py  intent.py  ioa_graph.py  killchain.py  killweb.py  kql_validator.py  lineage.py  llm.py  malware.py  (+23 more)
data/: README.md  attack_coverage.yaml  ground_segment_coverage.yaml  mitre_attack_graph.yaml
demo_snapshots/: 001-dashboard.snapshot.json  002-dashboard.snapshot.json  003-dashboard.snapshot.json  004-dashboard.snapshot.json
deploy/: Dockerfile  JUDGE-DEPLOY.md  judge.env.example
docs/: CONTRACT-detection-analysis.md  airsim-windows-build.md  airsim-windows-setup.md  attack-coverage-gaps.md  azure-tables-integration.md  benchmarks-ci.md  demo-airsim-setup.md  demo-runbook-learning-loop.md  demo-runbook-s8.md  demo-runbook.md  gcs-access-scenarios.md  gitops-cicd.md  golden-fixture-response-trace.md  kpi-monitoring.md  sentinel-watchlist-schemas.md  sim-validation-findings.md  status-hwang-junsik.md  uav-sim-muav-migration.md
kb/: README.md
notion-kanban/: D3FEND UAV 만들기.md  RED 에이전트 구조.md  S1~S11 공격 시나리오.md  SOC 에이전트 구조.md  Sentinel 설정 IaC 코드화.md  UAV ATT&CK 매핑표.md  UAV 컴포넌트 공부.md  Watch List 설정.md  공격 시나리오 보강.md  공세적 UAV 운영.md  마이터 어택 UAV 만들기.md  시나리오 - UAV ATT&CK 매핑.md  에이전트별 KPI 정리.md  온도브 AI (1).md  온도브 AI.md  와치리스트 시나리오 매핑 및 배포 현황.md  인프라 추가 구축.md  테스트 Mission 정의 및 Watch List 설정.md  팀원 계정 Azure 구독 초대.md
s8-demo-recording/: replay.html  replay_traj.json
scripts/: ai_redteam_to_poam.py  build_replay_html.py  demo.py  gen_bas_scenarios.py  gen_coverage_kpi.py  gen_table_testdata.py  ingest_kb.py  sim_demo.py  sim_emit_gcs.py  sim_inject_gps_spoof.py  sim_inject_onboard_evade.py  sim_live_bridge.py  sim_live_bridge_mav.py  sim_live_bridge_onboard.py  sim_reset.py  sim_send_rtb.py  sim_takeoff.py  sync_rule_manifest.py
sentinel/: rule_manifest.json
sim_bridge/: README.md  __init__.py  actuator.py  bridge.py  detector.py  gcs_access_synth.py  mavlink_source.py  models.py  observation_source.py  outcome.py  perception_synth.py  synth.py
tools/: README.md  __init__.py  airspace_tool.py  atlas_feed.py  cisa_kev_feed.py  coverage.py  feed_base.py  gnss_jam_tool.py  graph_retriever.py  graph_yaml_patch.py  kb_stub_tool.py  malware_mcp_tool.py  mitre_stix_feed.py  ragas_evaluator.py  ragflow_experience.py  ragflow_tool.py  rule_publisher.py  sandbox_tool.py  sentinel_query_tool.py  ti_tool.py  vuln_tool.py
utils/: __init__.py  logging.py
(+536 files in other folders)
